@@ -458,13 +458,12 @@
      "python_mod_compile" "python_mod_optimize"
      "python_mod_cleanup" "python_disable_pyc" "python_enable_pyc"
      "python_get_libdir" "python_get_sitedir" "python_need_rebuild"
-     "validate_PYTHON_ABIS" "python_copy_sources"
-     "python_execute_function" "python_get_includedir"
+     "python_copy_sources" "python_execute_function" "python_get_includedir"
      "python_convert_shebangs" "python_set_active_version"
      "python_generate_wrapper_scripts" "python_get_library"
      "python_get_version" "python_execute_nosetest" "python_execute_py.test"
      "python_execute_trial" "python_get_implementation"
-     "python_get_implementational_package" "python_clean_sitedirs")
+     "python_get_implementational_package" "python_clean_installation_image")
     font-lock-type-face))
 
 (defvar ebuild-mode-keywords-common-lisp-common-3
