@@ -3,6 +3,9 @@
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-qt4-build): Add
 	qt_assistant_cleanup() and qt_nolibx11() functions
 	(ebuild-mode-keywords-xorg-2): Remove cleanup_fonts() function
+	(ebuild-mode-keywords-python): Remove validate_PYTHON_ABIS() as it is an
+	internal function, rename python_clean_sitedir() to
+	python_clean_installation_image()
 
 2010-07-09  Ulrich Mueller  <ulm@gentoo.org>
 
